objects/APTS_MSPA_Sales_Order__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Creation_Date__c</fullName>
        <description>R3-QFA-MR4 Req#6664,created to display Customer Order Creation Date from ERP Order Item Data object.</description>
        <label>Order Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_MSPA__c</fullName>
        <label>MSPA</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>MSPA Sales Orders</relationshipLabel>
        <relationshipName>MSPA_Sales_Orders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>APTS_Residual_Order_Amount__c</fullName>
        <label>Residual Order Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Total_Order_Amount__c</fullName>
        <label>Total Order Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <description>R3-QFA-MR4 Req#6664,modified the field label from Order Date to Document Date,to display MSPA Documented Date from ERP Order Additional Data object.</description>
        <label>Document Date</label>
        <type>Date</type>
    </fields>
    <label>MSPA Sales Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sales Order Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MSPA Sales Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>